# daylog

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  release.config.js
.claude/skills/daylog/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-26-sleep-commands.md  2026-04-29-structured-nutrition-db.md  2026-04-30-cli-food-note-bp.md  2026-05-01-daylog-today.md  2026-05-05-vitalog-rename-and-release-pipeline.md  2026-05-07-vitalog-trend.md  2026-05-12-reminders-time-gates.md  2026-05-12-reminders.md
docs/superpowers/specs/: 2026-04-26-sleep-commands-design.md  2026-04-29-structured-nutrition-db-design.md  2026-04-30-cli-food-note-bp-design.md  2026-05-01-daylog-today-design.md  2026-05-05-vitalog-rename-and-release-pipeline-design.md  2026-05-07-vitalog-trend-design.md  2026-05-12-reminders-design.md  (+1 more)
presets/: default.toml
scripts/: bump-cargo.sh
src/: app.rs  body.rs  config.rs  db.rs  demo.rs  food_sum.rs  frontmatter.rs  goals.rs  legacy.rs  lib.rs  main.rs  materializer.rs  reminders.rs  state.rs  template.rs  time.rs
src/cli/: bp_cmd.rs  completions.rs  edit_cmd.rs  food_cmd.rs  log_cmd.rs  migrate_cmd.rs  mod.rs  note_cmd.rs  readme_cmd.rs  sleep_cmd.rs  status_cmd.rs  sync_cmd.rs  today_cmd.rs  trend_cmd.rs
src/materializer/: daily.rs  mod.rs  nutrition.rs
src/modules/: dashboard.rs  mod.rs  training.rs  trends.rs
tapes/: demo.tape  test.tape
templates/: daily-note.md
tests/: integration.rs  migrate.rs  reminders.rs  today.rs  trend.rs
(+1 files in other folders)
