[package]
name = "daylog"
version = "0.1.0"
edition = "2021"
description = "A terminal dashboard that tracks your life from markdown notes"
license = "MIT"
repository = "https://github.com/tylerjl/daylog"
homepage = "https://github.com/tylerjl/daylog"
readme = "README.md"
keywords = ["tui", "dashboard", "life-tracking", "markdown", "terminal"]
categories = ["command-line-utilities"]
exclude = ["tapes/", ".claude/", ".github/"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-rust2 = "0.10"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "6"
regex = "1"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
